working on movement and jump bugs2

--- a/css/how-to-play.css
+++ b/css/how-to-play.css
@@ -40,7 +40,7 @@ video
     width: 500px; 
     height: 280px;
     border-radius: 40px;
-    box-shadow: 0px 5px 5px;
+   /* box-shadow: 0px 5px 5px;*/
 }
 #NextButton , #ExitButton
 {
